# aoc2024

./: .gitignore  LICENSE  pyproject.toml  ruff.toml
1/: main.py
days/10/: main.py
days/11/: main.py
days/12/: main.py
days/13/: main.py
days/14/: main.py
days/15/: main.py
days/16/: main.py
days/17/: main.py
days/18/: main.py
days/2/: main.py
days/20/: main.py
days/3/: main.py
days/4/: main.py
days/5/: main.py
days/6/: main.py
days/7/: main.py
days/8/: main.py
days/9/: main.py
