[tool.poetry]
name = "aoc2024"
version = "0.1.0"
description = ""
authors = ["Aidar Rakhimov <a.rakhimov@cian.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.8.1"
ipython = "^8.30.0"
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
